  and @functions, are called. This provides better security-checking
  capabilities. Based on an idea from PennMUSH.

- The %m substitution can now be used for last command (MUX2 compatibility;
  %c is the usual substitution).

- Brackets are no longer required around eval-locks, hooks, or @exitto code.

- The *<player> syntax is supported in many more places.

- Extended regular expression syntax from Perl 5 is now supported.
  This is based on the PCRE library, as modified by the PennMUSH team.

- New regular expression functions: regedit(), regediti(), regeditall(),
  regeditalli(), regrab(), regrabi(), regraball(), regraballi(),
  regrep(), regrepi(), regmatchi(), regparsei().

- Added a variety of comsys-related functions: cemit(), comalias(),
  comdesc(), comheader(), cominfo(), comlist(), comowner(), comtitle(),
  cwhoall().

- cwho() now only returns what's listening.

- The filter(), filterbool(), map(), and while() functions pass the
  position of the element in the list as %1. fold() passes the position
  of the element in the list as %2. foreach() passes the position of
  the character in the string (starting from position 0). Based on
  an idea from PennMUSH.

- The idle(), conn(), and doing() functions can now take a port number.

- The escape(), secure(), capstr(), lcstr(), and ucstr() functions now
  handle ANSI properly.

- Added border(), rborder(), and cborder(). These are word-wrap functions
  which can left/right/center-justify text within the field, and add
  left and right-margin borders.

- Added cand(), cor(), candbool(), and corbool(), similar to and() etc.,
  except these functions stop evaluating their arguments once a terminating
  conclusion is reached. Based on an idea from PennMUSH.

- chomp() can now handle a lone CR or LF.

- Added choose(), weighted-random-choice pick of an element from a list.
  Idea from FiranMUX.

- Added connrecord(), connected player record (as in WHO).
